// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  className="done"
  data-testid="done-1"
>
  <h1>
    Done
  </h1>
  <hr />
  <ul />
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  className="done"
  data-testid="done-1"
>
  <h1>
    Done
  </h1>
  <hr />
  <ul>
    <li
      className="listing"
    >
      <p>
         
        <h4>
           Title : 
        </h4>
         
        testing
      </p>
    </li>
  </ul>
</div>
`;

exports[`matches snapshot 3 1`] = `
<div
  className="done"
  data-testid="done-1"
>
  <h1>
    Done
  </h1>
  <hr />
  <ul>
    <li
      className="listing"
    >
      <p>
         
        <h4>
           Title : 
        </h4>
         
        testing
      </p>
    </li>
    <li
      className="listing"
    >
      <p>
         
        <h4>
           Title : 
        </h4>
         
        testingtwo
      </p>
    </li>
  </ul>
</div>
`;
